--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,16 @@ services:
     build: .
     container_name: nonebot
     ports:
-      - "8080:8080" # 映射端口到宿主机 宿主机端口:容器端口
-    env_file:
-      - ".env.prod" # fastapi 使用的环境变量文件
+      - "23333:23333" # 映射端口到宿主机 宿主机端口:容器端口
+    #    env_file:
+    #      - ".env.prod" # fastapi 使用的环境变量文件
     environment:
       - ENVIRONMENT=prod # 配置 nonebot 运行环境，此项会被 .env 文件覆盖
       - APP_MODULE=bot:app # 配置 asgi 入口
       - MAX_WORKERS=1 # 如果你有多个QQ，且存在 self_id 指定，多个 worker 会导致无法找到其他 websocket 连接
     network_mode: bridge
+    restart: unless-stopped
+    volumes:
+      - ~/.AL_1S/data:/app/data              # 这几条为挂载AL-1S的工作数据目录与配置文件
+      - ~/.AL_1S/accounts:/app/accounts      # 挂载格式为 宿主机路径:容器路径
+      - ~/.AL_1S/config.yml:/app/config.yml  # 默认的工作路径为 ~/.AL-1S 注意该目录默认状态下是隐藏的
