废弃了旧的搜图插件, 现在只使用hikari搜索图片

--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ BotSelfConfig:
   proxy: ""  # 请参考文档
   ex_cookie: ""
   search_limit: 1  # 搜索限制 防刷屏
-  risk_control: false  # 风控模式 启动后会使用合并转发 只有gocq有实现
+  risk_control: true  # 风控模式 启动后会使用合并转发 只有gocq有实现
   record_priority: 99  # 记录上一张图片matcher的优先级，与 上一张 命令有关
 
 InlineGoCQHTTP:
