--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-nonebot-plugin-gocqhttp>=0.4.1
-nonebot-plugin-imageutils>=0.1.6
+nonebot-plugin-gocqhttp>=0.5.6
+nonebot_plugin_moegoe>=0.5.1
+nonebot-plugin-imageutils>=0.1.8.1
 PyYAML>=6.0
-nonebot>=1.9.1
+nonebot2>=2.0.0b5
 ujson>=5.3.0
-pydantic>=1.9.1
-Pillow>=9.1.0
-lxml>=4.9.0
+pydantic>=1.9.2
+Pillow>=9.2.0
+lxml>=4.9.1
 aiohttp>=3.8.1
 Jinja2>=3.1.2
 proxy>=0.0.1
 httpx>=0.23.0
 tqdm>=4.64.0
 psutil>=5.9.1
-numpy>=1.23.0
-imageio>=2.19.3
-pdm-pep517>=0.12.0
+numpy>=1.23.2
+imageio>=2.21.1
+pdm-pep517>=1.0.4
