调整包的版本, 删除token, admin插件基础框架

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-nonebot-plugin-gocqhttp>=0.5.6
+nonebot-plugin-gocqhttp>=0.6.1
 nonebot_plugin_moegoe>=0.5.1
 nonebot-plugin-imageutils>=0.1.8.1
 nonebot_plugin_petpet>=0.3.10
 PyYAML>=6.0
 nonebot2>=2.0.0b5
-ujson>=5.3.0
-pydantic>=1.10.2
+ujson>=5.5.0
+pydantic>=1.10
 Pillow>=9.2.0
 lxml>=4.9.1
-aiohttp>=3.8.1
+aiohttp>=3.8.3
 Jinja2>=3.1.2
 proxy>=0.0.1
 httpx>=0.23.0
 tqdm>=4.64.1
 psutil>=5.9.2
-numpy>=1.23.2
-imageio>=2.21.2
+numpy>=1.23.3
+imageio==2.22.0
 pdm-pep517>=1.0.4
-fastapi>=0.79.1
+py-cpuinfo>=8.0.0
 requests>=2.28.1
