--- a/config.yml
+++ b/config.yml
@@ -28,8 +28,8 @@ BotStatus:
 YgoCard:
 
 AiDrawer:
-  wenxin_ak: "G1qqnpiVCq0FgT7lss22duBsoeLsBexX"
-  wenxin_sk: "Uaxz9R90mQfMDBhYQKHGnnS5MmKk6ax7"
+  wenxin_ak: ""
+  wenxin_sk: ""
   wenxin_cd_time: 60
   wenxin_image_count: 3
   wenxin_manager_list: [ "1303030112" ]
